Add professional README and Vercel dashboard demo